<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Menu_Kind_Item1"
            android:title="@string/Menu_Kind_Item1" />
        <item
            android:id="@+id/Menu_Kind_Item2"
            android:title="@string/Menu_Kind_Item2" />
        <item
            android:id="@+id/Menu_Kind_Item4"
            android:title="@string/Menu_Kind_Item4" />
        <item
            android:id="@+id/Menu_Kind_Item5"
            android:title="@string/Menu_Kind_Item6" />
        <item
            android:id="@+id/Menu_Kind_Item7"
            android:title="@string/Menu_Kind_Item7" />
        <item
            android:id="@+id/Menu_Kind_Item8"
            android:title="@string/Menu_Kind_Item8" />
        <item
            android:id="@+id/Menu_Kind_Item9"
            android:title="@string/Menu_Kind_Item9" />
        <item
            android:id="@+id/Menu_Kind_Item10"
            android:title="@string/Menu_Kind_Item10" />
        <item
            android:id="@+id/Menu_Kind_Item11"
            android:title="@string/Menu_Kind_Item11" />
        <item
            android:id="@+id/Menu_Kind_Item12"
            android:title="@string/Menu_Kind_Item12" />
        <item
            android:id="@+id/Menu_Kind_Item13"
            android:title="@string/Menu_Kind_Item13" />

    </group>




</menu>