<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Menu_latest_Item1"
            android:title="@string/Menu_latest_Item1" />
        <item
            android:id="@+id/Menu_latest_Item2"
            android:title="@string/Menu_latest_Item2" />
        <item
            android:id="@+id/Menu_latest_Item3"
            android:title="@string/Menu_latest_Item3" />
        <item
            android:id="@+id/Menu_latest_Item4"
            android:title="@string/Menu_latest_Item4" />
        <item
            android:id="@+id/Menu_latest_Item5"
            android:title="@string/Menu_latest_Item5" />

    </group>




</menu>